--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,7 +13,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "hk/bulk_download_0_spike" ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
