--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,9 +37,9 @@ jobs:
           ls -al
           # zip -r cves.zip .
           # do a subset
-          zip -r cves.zip review_set/1999
-          git tag v0.0.0-${{ needs.generate-name.outputs.v_current_run_timestamp }}
-          git push origin v0.0.0-${{ needs.generate-name.outputs.v_current_run_timestamp }}
+          zip -r cves.zip ./review_set/1999 -x "*/\.*"
+          git tag cve1999_${{ needs.generate-name.outputs.v_current_run_timestamp }}
+          # git push origin cve1999_${{ needs.generate-name.outputs.v_current_run_timestamp }}
 
       - name: Use the Upload Artifact GitHub Action
         uses: actions/upload-artifact@v3
