--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,15 +31,17 @@ jobs:
     steps:
       - name: clone cves
         uses: actions/checkout@v3
+      - name: tag repository
+        run: |
+          git tag cve_${{ needs.generate-name.outputs.v_current_run_timestamp }}
+          git push origin cve_${{ needs.generate-name.outputs.v_current_run_timestamp }}
       - name: prep 1999 cves for zip download
         run: |
           pwd
           ls -al
-          # zip -r cves.zip .
+          zip -r cves.zip ./review_set -x "*/\.*"
           # do a subset
-          zip -r cves.zip ./review_set/1999 -x "*/\.*"
-          git tag cve1999_${{ needs.generate-name.outputs.v_current_run_timestamp }}
-          # git push origin cve1999_${{ needs.generate-name.outputs.v_current_run_timestamp }}
+          zip -r cves1999.zip ./review_set/1999 -x "*/\.*"
 
       - name: Use the Upload Artifact GitHub Action
         uses: actions/upload-artifact@v3
