--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,13 +4,13 @@ name: poc_test
 
 on:
   # push:
-  #   branches: ['main']
+  #   branches: ['hk/bulk_download_0_spike']
   # pull_request:
   #   branches: [ "main" ]
-  schedule:
-    # at 0 min after each hour (note this does not include update at 0 min after each hour
-    #   since that job will be running in parallel to this)
-    - cron: '0 * * * *'
+  # schedule:
+  #   # at 0 min after each hour (note this does not include update at 0 min after each hour
+  #   #   since that job will be running in parallel to this)
+  #   - cron: '0 * * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
