--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,21 +62,21 @@ jobs:
       - name: create release
         id: create_release
         uses: actions/create-release@v1
-        # env:
-        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: cve_${{ needs.generate-name.outputs.v_current_run_timestamp }}
           release_name: CVE Release ${{ needs.generate-name.outputs.v_current_run_timestamp }}
           draft: false
           prerelease: false
-          make_latest: true
+          # make_latest: true
 
       - name: bundle artifacts
         id: bundle_artifacts
         uses: softprops/action-gh-release@v1
         # if: startsWith(github.ref, 'refs/tags/')
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
         with:
           files: |
             cves_${{ needs.generate-name.outputs.v_current_run_timestamp }}.zip
