--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,29 +26,29 @@ jobs:
       - name: generate-name
         id: get-timestamp
         run: echo "out=$(date '+%Y-%m-%d_%H%M_UTC')" >> $GITHUB_OUTPUT
-  create_artifacts:
-    needs: generate-name
-    environment: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: clone cves
-        uses: actions/checkout@v3
-      - name: tag repository
-        run: |
-          git tag cve_${{ needs.generate-name.outputs.v_current_run_timestamp }}
-          git push origin cve_${{ needs.generate-name.outputs.v_current_run_timestamp }}
-      - name: build cves for zip download
-        run: |
-          pwd
-          ls -al
-          zip -r cves.zip ./review_set -x "*/\.*"
-          # do a subset
-          # zip -r cves1999.zip ./review_set/1999 -x "*/\.*"
-      - name: Use the Upload Artifact GitHub Action
-        uses: actions/upload-artifact@v3
-        with:
-          name: cves_${{ needs.generate-name.outputs.v_current_run_timestamp }}.zip
-          path: ./cves.zip
+  # create_artifacts:
+  #   needs: generate-name
+  #   environment: test
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: clone cves
+  #       uses: actions/checkout@v3
+  #     - name: tag repository
+  #       run: |
+  #         git tag cve_${{ needs.generate-name.outputs.v_current_run_timestamp }}
+  #         git push origin cve_${{ needs.generate-name.outputs.v_current_run_timestamp }}
+  #     - name: build cves for zip download
+  #       run: |
+  #         pwd
+  #         ls -al
+  #         zip -r cves.zip ./review_set -x "*/\.*"
+  #         # do a subset
+  #         # zip -r cves1999.zip ./review_set/1999 -x "*/\.*"
+  #     - name: Use the Upload Artifact GitHub Action
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: cves_${{ needs.generate-name.outputs.v_current_run_timestamp }}.zip
+  #         path: ./cves.zip
   create_release:
     needs: [generate-name, create_artifacts]
     environment: test
@@ -81,5 +81,5 @@ jobs:
           name: CVE ${{ needs.generate-name.outputs.v_current_run_timestamp }}
           body: Descriptions for CVE ${{ needs.generate-name.outputs.v_current_run_timestamp }} goes here
           tag_name: cve_${{ needs.generate-name.outputs.v_current_run_timestamp }}
-          files: |
-            cves_${{ needs.generate-name.outputs.v_current_run_timestamp }}.zip
+          # files: |
+          #   cves_${{ needs.generate-name.outputs.v_current_run_timestamp }}.zip
