--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,18 +65,15 @@ jobs:
       #     draft: false
       #     prerelease: false
       #     # make_latest: true
-      - name: generate release notes
-        run: echo "# Good things have arrived" > release_notes.md
-      - name: create release with artifacts
-        id: bundle_artifacts
+      - name: Update release notes
+        run: echo "CVEs updated" > release_notes.md
+      - name: create release with source code as artifacts
         uses: softprops/action-gh-release@v1
-        # if: startsWith(github.ref, 'refs/tags/')
-        # env:
-        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
         with:
           name: CVE ${{ needs.generate-name.outputs.v_current_run_timestamp }}
           # body: Descriptions for CVE ${{ needs.generate-name.outputs.v_current_run_timestamp }} goes here
           body_path: ./release_notes.md
           tag_name: cve_${{ needs.generate-name.outputs.v_current_run_timestamp }}
-          # files: |
+          files: |
+            release_notes.md
           #   cves_${{ needs.generate-name.outputs.v_current_run_timestamp }}.zip
