--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -27,7 +27,7 @@ jobs:
         id: get-timestamp
         # run: echo "out=$(date '+%Y-%m-%d_%H%M_UTC')" >> $GITHUB_OUTPUT
         run: |
-          echo "out=$(date '+%Y-%m-%d_%H%M_UTC')" >> $TEMP_TIMESTAMP
+          TEMP_TIMESTAMP=$(date '+%Y-%m-%d_%H%M_UTC')
           echo "$TEMP_TIMESTAMP" >> $GITHUB_OUTPUT
       - name: update-log
         run: echo "$TEMP_TIMESTAMP" >> update_log.md
