--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,4 +76,5 @@ jobs:
           tag_name: cve_${{ needs.generate-name.outputs.v_current_run_timestamp }}
           files: |
             release_notes.md
+            update_log.md
           #   cves_${{ needs.generate-name.outputs.v_current_run_timestamp }}.zip
