--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -27,13 +27,13 @@ jobs:
         id: get-timestamp
         # run: echo "out=$(date '+%Y-%m-%d_%H%M_UTC')" >> $GITHUB_OUTPUT
         run: |
-          TEMP_TIMESTAMP=$(date '+%Y-%m-%d_%H%M_UTC')
+          export TEMP_TIMESTAMP=$(date '+%Y-%m-%d_%H%M_UTC')
           echo "out=$TEMP_TIMESTAMP" >> $GITHUB_OUTPUT
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: update-log
         run: |
-          echo "$TEMP_TIMESTAMP" >> update_log.md
+          echo $TEMP_TIMESTAMP >> update_log.md
           git remote set-url origin https://${GITHUB_TOKEN}@github.com/hkong-mitre/cvelistV5.git
           git config user.email "you@example.com"
           git config user.name "Github Action"
