--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,4 +77,5 @@ jobs:
           files: |
             release_notes.md
             update_log.md
+            preview_cves/recent_activities.json
           #   cves_${{ needs.generate-name.outputs.v_current_run_timestamp }}.zip
