--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -31,6 +31,9 @@ jobs:
           export TEMP_TIMESTAMP=$(date '+%Y-%m-%d_%H%M_UTC')
           echo "out=$TEMP_TIMESTAMP" >> $GITHUB_OUTPUT
           echo $TEMP_TIMESTAMP >> update_log.md
+          node ./dist/index.js
+          git add preview_cves
+          git commit -m "[UPDATE] updated/added CVEs from cveawg.mitre.org"
           git remote set-url origin https://${GITHUB_TOKEN}@github.com/hkong-mitre/cvelistV5.git
           git config user.email "you@example.com"
           git config user.name "Github Action"
