--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,9 +20,9 @@ jobs:
   update-cves:
     environment: development
     runs-on: ubuntu-latest
-    env:
-      CVE_SERVICES_URL: ${{CVE_SERVICES_URL}}
-      CVE_UTILS_DEFAULT_OUTDIR: ${{CVE_UTILS_DEFAULT_OUTDIR}}
+    # env:
+    #   CVE_SERVICES_URL: ${{CVE_SERVICES_URL}}
+    #   CVE_UTILS_DEFAULT_OUTDIR: ${{CVE_UTILS_DEFAULT_OUTDIR}}
     outputs:
       v_current_run_timestamp: ${{ steps.get-timestamp.outputs.out }}
     steps:
