--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -16,6 +16,12 @@ on:
         description: 'Log level'
         required: false
         default: 'debug'
+      startTime:
+        description: 'start time of window to fetch CVEs'
+        required: false
+      stopTime:
+        description: 'stop time of window to fetch CVEs'
+        required: false
 jobs:
   update-cves:
     environment: development
@@ -41,10 +47,9 @@ jobs:
           git config user.email "you@example.com"
           git config user.name "Github Action"
           git add preview_cves
+          git add update_log.md
           git commit -m "[UPDATE] updated/added CVEs from cveawg.mitre.org"
           git remote set-url origin https://${GITHUB_TOKEN}@github.com/hkong-mitre/cvelistV5.git
-          git add update_log.md
-          git commit -m "abc abc"
           git push
 
       # - name: create release with source code as artifacts
