fix path to cveutils

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -47,7 +47,7 @@ jobs:
           echo "out=$TEMP_TIMESTAMP" >> $GITHUB_OUTPUT
           echo $TEMP_TIMESTAMP >> update_log.md
           git pull
-          node ./.github/workflows/cves.sh update
+          node ./.github/workflows/dist/index.js update
           git config user.email "github_action@example.com"
           git config user.name "Github Action"
           git add preview_cves
