--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -42,6 +42,7 @@ jobs:
           echo $TEMP_TIMESTAMP >> update_log.md
           git pull
           node ./.github/workflows/dist/index.js update ${{ github.event.inputs.params }}
+          git status
           git config user.email "github_action@example.com"
           git config user.name "Github Action"
           git add preview_cves
