--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -26,6 +26,7 @@ jobs:
     env:
       CVE_SERVICES_URL: https://cveawg.mitre.org
       CVES_BASE_DIRECTORY: ./preview_cves
+      CVES_DEFAULT_UPDATE_LOOKBACK_IN_MINS: 180
       CVE_API_ORG: ${{secrets.CVE_API_ORG}}
       CVE_API_USER: ${{secrets.CVE_API_USER}}
       CVE_API_KEY: ${{secrets.CVE_API_KEY}}
