add GH env vars for octokit

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,6 +30,8 @@ jobs:
       CVE_API_ORG: ${{secrets.CVE_API_ORG}}
       CVE_API_USER: ${{secrets.CVE_API_USER}}
       CVE_API_KEY: ${{secrets.CVE_API_KEY}}
+      GH_OWNER: hkong-mitre
+      GH_REPO: cvelistV5
     outputs:
       v_current_run_timestamp: ${{ steps.get-timestamp.outputs.out }}
     steps:
